--- a/startup-profit-prediction - Practice.ipynb
+++ b/startup-profit-prediction - Practice.ipynb
@@ -49,35 +49,34 @@
     "* #### Предсказать, в какие компании инвестировать для максимизации прибыли (выбрать модель с лучшим результатом, создать прогнозы, выбрать компании)\n",
     "\n",
     "\n",
-    "## [Part 1: Import, Load Data](#Part-1:-Import,-Load-Data.)\n",
-    "* ### Import libraries, Read data from ‘.csv’ file\n",
+    "## Часть 1: Импорт библиотек, данных и всего необходимого для работы\n",
+    "* ###  Импорт библиотек, данных и всего необходимого для работы\n",
     "\n",
-    "## [Part 2: Exploratory Data Analysis](#Part-2:-Exploratory-Data-Analysis.)\n",
-    "* ### Info, Head\n",
-    "* ### Observation of target variable (describe + visualisation:distplot)\n",
-    "* ### Numerical and Categorical features\n",
-    "    * #### List of Numerical and Categorical features\n",
-    "* ### Missing Data\n",
-    "    * #### List of data features with missing values  \n",
-    "    * #### Filling missing values\n",
-    "* ### Numerical and Categorical features    \n",
-    "    * #### Visualisation  of Numerical and categorical features (regplot + barplot)\n",
+    "## Часть2: Исследовательский анализ данных\n",
+    "* ### Информация\n",
+    "* ### Описание целевой переменной (описание + визуализация: график distplot)\n",
+    "* ### Числовые и категориальные данные\n",
+    "    * #### Перечень числовых и категориальных данных\n",
+    "* ### Пропущенные значения\n",
+    "    * #### Список пропущенных значений  \n",
+    "    * #### Заполнение и/или удаление пропущенных значений\n",
+    "* ### Числовые и категориальные данные: описание  \n",
+    "    * #### Визуализация\n",
     "\n",
-    "## [Part 3: Data Wrangling and Transformation](#Part-3:-Data-Wrangling-and-Transformation.)\n",
-    "* ### One-Hot Encoding \n",
-    "* ### Standard Scaler (optional)\n",
-    "* ### Creating datasets for ML part\n",
-    "* ### 'Train\\Test' splitting method\n",
+    "## Часть 3: Обработка и преобразование данных\n",
+    "* ### One-Hot Преобразование \n",
+    "* ### Нормализация (опционально)\n",
+    "* ### Разбиение датасета на части (Train\\test)\n",
     "\n",
-    "## [Part 4: Machine Learning](#Part-4:-Machine-Learning.)\n",
-    "* ### ML Models (Linear regression, Gradient Boosting Regression)\n",
-    "* ### Build, train, evaluate and visualise models\n",
-    "* ### Creating final predictions with Test set\n",
-    "* ### Model comparison\n",
+    "## Часть 4: Машинное обучение\n",
+    "* ### ML-модели (Линейная регрессия, Градиентный бустинг)\n",
+    "* ### Построение, тренировка, оценка and визуализация модели\n",
+    "* ### Создание финального предсказания для тестового набора\n",
+    "* ### Сравнение моделей машинного обучения\n",
     "\n",
     "\n",
-    "## [Conclusion](#Conclusion.)\n",
-    "* ### Submission of ‘.csv’ file with predictions"
+    "## Заключение\n",
+    "* ###  Сохранение предсказанных данных в csv-файле"
    ]
   },
   {
@@ -845,13 +844,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Visualisation  of Numerical features (regplot)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 84,
    "metadata": {},
@@ -868,7 +860,7 @@
     }
    ],
    "source": [
-    "# numerical features visualisation\n",
+    "# Визуализация числовых данных\n",
     "nr_rows = 2\n",
     "nr_cols = 2\n",
     "\n",
@@ -922,7 +914,7 @@
     }
    ],
    "source": [
-    "# categorical features visualisation\n",
+    "# Визуализация категориальных переменных\n",
     "# Профит в разрезе штата\n",
     "sb.barplot(x = 'State', y = 'Profit', data = train, palette = \"Reds_d\")\n"
    ]
@@ -987,10 +979,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One-Hot Encoding Train dataset\n",
+    "# One-Hot преобразование тренировочного датасета\n",
     "train = pd.get_dummies(train,columns=['State', 'Category'])\n",
     "\n",
-    "# Drop target variable \n",
+    "# Удалим целевую переменную \n",
     "train = train.drop(columns=['Profit'])\n",
     "\n"
    ]
@@ -1177,7 +1169,7 @@
     }
    ],
    "source": [
-    "# preview of the first 5 lines of the loaded Train data \n",
+    "# Посмотрим несколько первых строк для отслеживания преобразований данных\n",
     "train.head()"
    ]
   },
@@ -1198,7 +1190,7 @@
     }
    ],
    "source": [
-    "# Train data shape\n",
+    "# Проверим количество строк и столбцов\n",
     "train.shape"
    ]
   },
@@ -1208,7 +1200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# One Hot-Encoding Test dataset\n",
+    "# One-Hot преобразование тестового датасета\n",
     "test = pd.get_dummies(test, columns = ['State', 'Category'])\n"
    ]
   },
@@ -1396,7 +1388,7 @@
     }
    ],
    "source": [
-    "# preview of the first 5 lines of the loaded Test data \n",
+    "# Посмотрим несколько первых строк для отслеживания преобразований данных\n",
     "test.head()"
    ]
   },
@@ -1417,7 +1409,7 @@
     }
    ],
    "source": [
-    "# Test data shape\n",
+    "# Проверим количество строк и столбцов\n",
     "test.shape"
    ]
   },
@@ -1427,7 +1419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop unnecessary variables \n",
+    "# Удалим лишние столбцы\n",
     "train = train.drop(columns=['Category_None'])\n",
     "test = test.drop(columns=['State_None'])"
    ]
@@ -1461,13 +1453,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set 'X' for features of scaled Train dataset 'sc_train'\n",
+    "# установим в качестве 'X' тренировочный датасет\n",
     "X = train\n",
     "\n",
-    "# set 'y' for the target 'Profit'\n",
+    "# установим в качестве 'y' целевую переменную (у нас это \"Profit\")\n",
     "y = target\n",
     "\n",
-    "# 'X_Test' for features of scaled Test dataset 'sc_test'\n",
+    "# 'X_Test' будет представлен тестовым датасетом\n",
     "X_Test = test"
    ]
   },
@@ -1552,14 +1544,14 @@
     }
    ],
    "source": [
-    "# Linear Regression model\n",
+    "# Модель линейной регрессии\n",
     "LR = LinearRegression()\n",
     "\n",
     "\n",
-    "# Model Training\n",
+    "# Тренируем модель\n",
     "LR.fit(X_train,y_train)\n",
     "\n",
-    "# Model Prediction\n",
+    "# Делаем предсказание\n",
     "LR_pred = LR.predict(X_test)\n",
     "LR_pred"
    ]
@@ -1570,7 +1562,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Model R2 score\n",
+    "# Считаем R2\n",
     "LRscore = LR.score(X_test, y_test)"
    ]
   },
@@ -1640,7 +1632,7 @@
     }
    ],
    "source": [
-    "# Model Metrics\n",
+    "# Метрики модели\n",
     "LRMetrics = pd.DataFrame({'Model': 'Linear Regression',\n",
     "                          'r2score':r2_score(y_test,LR_pred),\n",
     "                          'MAE': metrics.mean_absolute_error (y_test,LR_pred),\n",
@@ -1670,9 +1662,8 @@
     }
    ],
    "source": [
-    "# visualisation of Train dataset predictions\n",
+    "# Визуализируем предсказанные и реальные значения\n",
     "\n",
-    "# Plot outputs\n",
     "pl.figure(figsize=(8,5))\n",
     "pl.plot(y_test, LR_pred,'ro')\n",
     "pl.plot([0,200000],[0,200000],'b-')\n",
@@ -1712,7 +1703,7 @@
     }
    ],
    "source": [
-    "# Test final predictions\n",
+    "# Окончательные прогнозы для тестового датасета\n",
     "LR_pred1 = LR.predict(X_Test)\n",
     "LR_pred1"
    ]
@@ -1781,7 +1772,7 @@
     }
    ],
    "source": [
-    "# Model Metrics\n",
+    "# Метрики модели\n",
     "LRMetrics1 = pd.DataFrame({'Model': 'Linear Regression',\n",
     "                           'r2score':r2_score(y,LR_pred1),\n",
     "                           'MAE': metrics.mean_absolute_error (y,LR_pred1),\n",
@@ -1811,9 +1802,8 @@
     }
    ],
    "source": [
-    "# visualisation of Test dataset predictions\n",
+    "# Визуализируем предсказанные и реальные значения\n",
     "\n",
-    "# Plot outputs\n",
     "pl.figure(figsize=(8,5))\n",
     "pl.plot(y, LR_pred1,'ro')\n",
     "pl.plot([0,200000],[0,200000],'b-')\n",
@@ -1976,7 +1966,7 @@
     }
    ],
    "source": [
-    "# comparison between Actual 'Profit' from Train dataset abd Predicted 'Profit' from Test dataset\n",
+    "# сравнение \"фактической прибыли\" из набора данных Train и прогнозируемой прибыли из тестового набора данных\n",
     "actualvspredicted = pd.DataFrame({\"Actual Profit\":y,\"LR Predicted Profit\":LR_pred1 })\n",
     "actualvspredicted.head(10).style.background_gradient(cmap='Reds')"
    ]
@@ -1996,91 +1986,14 @@
    "source": [
     "GB=GradientBoostingRegressor(random_state=0)\n",
     "\n",
-    "# Model Training\n",
+    "# Тренируем модель\n",
     "GB.fit(X_train,y_train)\n",
     "\n",
-    "# Model Prediction\n",
+    "# Делаем предсказание\n",
     "GB_pred = GB.predict(X_test)\n",
     "\n",
-    "# Model R2 score\n",
+    "# Считаем R2\n",
     "GBscore =GB.score(X_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Model</th>\n",
-       "      <th>r2score</th>\n",
-       "      <th>MAE</th>\n",
-       "      <th>MSE</th>\n",
-       "      <th>RMSE</th>\n",
-       "      <th>MSLE</th>\n",
-       "      <th>RMSLE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Gradient Boosting Regressor</td>\n",
-       "      <td>0.871975</td>\n",
-       "      <td>8794.067752</td>\n",
-       "      <td>1.235755e+08</td>\n",
-       "      <td>11116.451707</td>\n",
-       "      <td>0.015324</td>\n",
-       "      <td>0.123789</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         Model   r2score          MAE           MSE  \\\n",
-       "2  Gradient Boosting Regressor  0.871975  8794.067752  1.235755e+08   \n",
-       "\n",
-       "           RMSE      MSLE     RMSLE  \n",
-       "2  11116.451707  0.015324  0.123789  "
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Model Metrics\n",
-    "GBMetrics = pd.DataFrame({'Model': 'Gradient Boosting Regressor',\n",
-    "                          'r2score':r2_score(y_test,GB_pred),\n",
-    "                          'MAE': metrics.mean_absolute_error (y_test,GB_pred),\n",
-    "                          'MSE': metrics.mean_squared_error(y_test,GB_pred),\n",
-    "                          'RMSE': np.sqrt(metrics.mean_squared_error(y_test,GB_pred)),\n",
-    "                          'MSLE': metrics.mean_squared_log_error(y_test,GB_pred),\n",
-    "                          'RMSLE':np.sqrt(metrics.mean_squared_log_error(y_test,GB_pred))             \n",
-    "                          },index=[2])\n",
-    "\n",
-    "GBMetrics"
    ]
   },
   {
@@ -2089,7 +2002,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test final predictions\n",
+    "# # Окончательные прогнозы для тестового датасета\n",
     "GB_pred1 = GB.predict(X_Test)"
    ]
   },
@@ -2157,7 +2070,7 @@
     }
    ],
    "source": [
-    "# Model Metrics\n",
+    "# Метрики модели\n",
     "GBMetrics1 = pd.DataFrame({'Model': 'GradientBoostingRegressor',\n",
     "                           'r2score':r2_score(y,GB_pred1),\n",
     "                           'MAE': metrics.mean_absolute_error (y,GB_pred1),\n",
@@ -2187,7 +2100,7 @@
     }
    ],
    "source": [
-    "# visualisation of Test dataset predictions\n",
+    "# Визуализация сравнения реальных и предсказанных результатов\n",
     "\n",
     "# Plot outputs\n",
     "pl.figure(figsize=(8,5))\n",
@@ -2283,7 +2196,7 @@
     }
    ],
    "source": [
-    "# score comparison of models\n",
+    "# Результаты работы двух моделей для сравнения показателей\n",
     "frames = [LRMetrics1,GBMetrics1]\n",
     "TrainingResult = pd.concat(frames)\n",
     "TrainingResult"
@@ -2482,7 +2395,7 @@
     }
    ],
    "source": [
-    "# comparison between Actual 'Profit' from Train dataset abd Predicted 'Profit' from Test dataset\n",
+    "# Сравнение \"фактической прибыли\" из набора данных Train и прогнозируемой прибыли из тестового набора данных (по двух моделям)\n",
     "actualvspredicted = pd.DataFrame({\"Actual Profit\":y,\"LR Predicted Profit\":LR_pred1, \"GB Predicted Profit\":GB_pred1})\n",
     "actualvspredicted.head(10).style.background_gradient(cmap='Reds')"
    ]
