--- a/Houses/House-prediction.ipynb
+++ b/Houses/House-prediction.ipynb
@@ -2987,13 +2987,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set 'X' for features of scaled Train dataset 'sc_train'\n",
+    "#  'X' из масштабируемых данных 'sc_train'\n",
     "X = sc_train\n",
     "\n",
-    "# set 'y' for the target 'Sale'\n",
+    "# 'y' - это наш таргет\n",
     "y = target\n",
     "\n",
-    "# 'X_Test' for features of scaled Test dataset 'sc_test'\n",
+    "# 'X_Test' из масштабируемых данных 'sc_test'\n",
     "X_Test = sc_test"
    ]
   },
@@ -3152,13 +3152,13 @@
     }
    ],
    "source": [
-    "# Linear Regression model\n",
+    "# Линейная регрессия\n",
     "LR = LinearRegression()\n",
     "\n",
-    "# Model Training\n",
+    "# Тренируем\n",
     "LR.fit(X_train,y_train)\n",
     "\n",
-    "# Model Prediction\n",
+    "# Предсказываем\n",
     "LR_pred = LR.predict(X_test)\n",
     "LR_pred"
    ]
@@ -3229,7 +3229,7 @@
     }
    ],
    "source": [
-    "# Model Metrics\n",
+    "# Метрики модели\n",
     "LRMetrics = pd.DataFrame({'Model': 'Linear Regression',\n",
     "                          'r2score':r2_score(y_test,LR_pred),\n",
     "                          'MAE': metrics.mean_absolute_error (y_test,LR_pred),\n",
@@ -3257,9 +3257,7 @@
     }
    ],
    "source": [
-    "# visualisation of Train dataset predictions\n",
-    "\n",
-    "# Plot outputs\n",
+    "# Визуализируем\n",
     "plt.figure(figsize=(8,5))\n",
     "pl.plot(y_test, LR_pred,'ro')\n",
     "pl.plot([0,200000],[0,200000],'b-')\n",
@@ -3286,7 +3284,7 @@
     }
    ],
    "source": [
-    "# Test final predictions\n",
+    "# Предсказания на тестовом датасете\n",
     "LR_pred1 = LR.predict(X_Test)\n",
     "LR_pred1  "
    ]
@@ -3348,7 +3346,7 @@
     }
    ],
    "source": [
-    "# Model Metrics\n",
+    "# Метрики модели\n",
     "LRMetrics1 = pd.DataFrame({'Model': 'Linear Regression',\n",
     "                           'r2score':r2_score(y,LR_pred1),\n",
     "                           'MAE': metrics.mean_absolute_error (y,LR_pred1),\n",
@@ -3377,7 +3375,7 @@
     }
    ],
    "source": [
-    "# Plot outputs\n",
+    "# Визуализируем\n",
     "plt.figure(figsize=(8,5))\n",
     "pl.plot(y, LR_pred1,'ro')\n",
     "pl.plot([0,200000],[0,200000],'b-')\n",
@@ -3538,16 +3536,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gradient Boosting Regressor model\n",
+    "# Модель градиентного бустинка\n",
     "GB=GradientBoostingRegressor(random_state=0)\n",
     "\n",
-    "# Model Training\n",
+    "# Тренируем\n",
     "GB.fit(X_train,y_train)\n",
     "\n",
-    "# Model Prediction\n",
+    "# Предсказываем\n",
     "GB_pred = GB.predict(X_test)\n",
     "\n",
-    "# Model R2 score\n",
+    "# R2 score\n",
     "GBscore =GB.score(X_test, y_test)"
    ]
   },
@@ -3615,7 +3613,7 @@
     }
    ],
    "source": [
-    "# Model Metrics\n",
+    "# Метрики модели\n",
     "GBMetrics = pd.DataFrame({'Model': 'Gradient Boosting Regressor',\n",
     "                          'r2score':r2_score(y_test,GB_pred),\n",
     "                          'MAE': metrics.mean_absolute_error (y_test,GB_pred),\n",
@@ -3634,7 +3632,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test final predictions\n",
+    "# Предскажем данные для теста\n",
     "GB_pred1 = GB.predict(X_Test)"
    ]
   },
@@ -3702,7 +3700,7 @@
     }
    ],
    "source": [
-    "# Model Metrics\n",
+    "# Метрики модели\n",
     "GBMetrics1 = pd.DataFrame({'Model': 'GradientBoostingRegressor',\n",
     "                           'r2score':r2_score(y,GB_pred1),\n",
     "                           'MAE': metrics.mean_absolute_error (y,GB_pred1),\n",
@@ -3732,9 +3730,8 @@
     }
    ],
    "source": [
-    "# visualisation of Test dataset predictions\n",
+    "# Визуализируем предсказания на тестовом датасете\n",
     "\n",
-    "# Plot outputs\n",
     "plt.figure(figsize=(8,5))\n",
     "pl.plot(y, GB_pred1,'ro')\n",
     "pl.plot([0,200000],[0,200000], 'b-')\n",
@@ -3995,7 +3992,7 @@
     }
    ],
    "source": [
-    "# comparison between Actual 'Profit' from Train dataset abd Predicted 'Profit' from Test dataset\n",
+    "#Сравним предсказания двух вариантов и реальные данные\n",
     "actualvspredicted = pd.DataFrame({\"Actual Profit\":y,\"LR Predicted Profit\":LR_pred1, \"GB Predicted Profit\":GB_pred1})\n",
     "actualvspredicted.head(10).style.background_gradient(cmap='Blues')"
    ]
@@ -4006,11 +4003,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# submission of .csv file with final predictions\n",
+    "# Сохраним в .csv файл\n",
     "sub = pd.DataFrame()\n",
     "sub['ID'] = test.index\n",
-    "sub['Profit'] = GB_pred1\n",
-    "sub.to_csv('StartupPredictions.csv', index=False)"
+    "sub['SalePrice'] = GB_pred1\n",
+    "sub.to_csv('HousePredictions.csv', index=False)"
    ]
   },
   {
